[project]
name = "comfyui-autotrimbg"
description = "ComfyUI-AutoCropBgTrim is a powerful tool designed to automatically clean up the background of your images. This tool trims unnecessary spaces and pixels, leaving only the main subject of the image. It generates both a mask and an image output, making it easy to focus on the essential elements. Perfect for enhancing your photos and preparing them for professional use."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["torch==1.10.0", "numpy==1.21.2", "Pillow==8.4.0"]

[project.urls]
Repository = "https://github.com/fexploit/ComfyUI-AutoTrimBG"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-AutoTrimBG"
Icon = ""
